# NetLibrary

./: .gitignore  CMakeLists.txt  CMakeListsNEW.txt  CMakeListsOLD.txt  ChatRoom.rar  README.md  ToDO  main.cpp
Headers/: ClientConnection.h  ClientDataHandler.h  ClientInfo.h  ConnectionInfo.h  Constants.h  DataPacket.h  Lobby.h  LobbyMember.h  MultiPacketContainer.h  NetworkDevice.h  NetworkEvent.h  ServerConnection.h  ServerDataHandler.h  TestClient.h  TestServer.h
Headers/Linux/: Client.h  Server.h
Headers/NetLib/: ClientConnection.h  ClientInfo.h  ConnectionInfo.h  Constants.h  DataEncryptor.h  Lobby.h  LobbyMember.h  MultiPacketContainer.h  NetworkDevice.h  NetworkEvent.h  ServerConnection.h  TestClient.h  TestServer.h
Headers/NetLib/Linux/: Client.h  Server.h
Headers/NetLib/Windows/: Client.h  Server.h
Headers/Windows/: Client.h  Server.h
Source/: ClientConnection.cpp  ClientDataHandler.cpp  DataEncryptor.cpp  NetworkDevice.cpp  ServerConnection.cpp  ServerDataHandler.cpp  TestClient.cpp  TestServer.cpp
Source/Linux/: Client.cpp  Server.cpp
Source/Windows/: Client.cpp  Server.cpp
cmake/: platform.cmake
